assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Baloo+2&family=Roboto&display=swap');

/*------------------general-----------*/
p, h2, h3, span{
    color:#fafafa;
    font-size: 20px;
    font-family: "Roboto", sans-serif;
}

h2 {
    text-align: center;
    padding: 20px;
}

section {
    height: 50em;
}

section .sub-title {
    font-size: 40px;
} 


/*------------------navigation bar-----------*/

.nav-overall {
    background-color: #03045E;
    padding-top: 0px;
    padding-right: 100px;
    margin: 0;
}

.navbar-large {
    visibility: hidden;
    display: none;
}

.dropdown {
    display: inline;
    visibility: visible;
    float: right;
}




ul {
    float: right;
    visibility: hidden;
    display: none;
}

#logo {
    background-color: #343738;
    display: inline-block;
    text-align: center;
    padding: 5px 20px;
    height: 100%;
}

#logo a {
    color: #fafafa;
    font-size: 70px;
    letter-spacing: -15px;
    text-decoration: none;
}



ul li {
    font-family: "Baloo2", sans-serif;
    padding: 30px 50px;
    background-color: rgba(52, 214, 255, 0.2);
    text-align: center;
    height: 100px;
    margin: 0;
    visibility: hidden;
    display: none;
}

ul li span {
    text-decoration: none;
    font-size: 25px;
    color: #fafafa;
    visibility: hidden;
    display: none;
}


.hvr-box-shadow-outset {
    vertical-align: baseline;
    visibility: hidden;
    display: none;
}

/*------------------first section-----------*/
.top-section {
    background-color:rgb(0, 86, 133);
}

.bottom-section {
    background-image: url("../images/social-media.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    /*if background image doesn't load*/
    background-color:#343738;
}

#title {
    text-align: center;
    font-family: "Roboto", sans-serif;
    font-size: 5em;
    color: #fafafa;
}

.main-heading {
    padding: 30px;
}


/*------------------second section-----------*/

.stats {
    padding-top: 50px;
}

.stat-given {
    margin: auto;
    width: 100%;
    position: absolute;
    
}

/*------------------About me-----------*/

#my-photo {
    width: 70%;
    height: 70%%;
    padding-top: 50px;
}

.about-me {
    margin-top: 20px;
}

.offer {
    text-align: center;
}

.free-offer {
    text-transform: uppercase;
    color: #dddd06;
}

.stats i {
    text-align: center;
    color: #dddd06;
    display: inline;
}


/*------------------Prices-----------*/

#hashtag-image {
    width: 40%;
    padding-top: 40px;
    display: block;
    margin-left: auto;
    margin-right: auto;
}


#likes-image {
    width: 65%;
    padding-top: 40px;
    display: block;
    margin-left: auto;
    margin-right: auto;
}
}

.price-box {
    height: 300px;
    width: 100%;
    margin: 10px;
    opacity: 0.8;
}

#bronze {
    background-color: rgba(197, 123, 52, 0.8);
    padding-bottom: 40px;
}

#silver {
    background-color: rgba(175, 172, 172, 0.8);
    margin: 0px 10px;
    padding-bottom: 40px;
}

#gold {
    background-color: rgba(226, 193, 4, 0.8);
    padding-bottom: 40px;
}

.price-text {
    color: #141414;
    text-align: center;
    margin: 0;
    padding-bottom: 5px;
}

.price-details {
    margin-left: 20px;
    width: 300px;
    text-align: center;
}


/*------------------Contact-----------*/

input {
    width: 300px;
}

.contact-form {
    text-align: center;
}

.message-box {
    height: 100px;
}

.label {
    color: #fafafa;
    font-family: "Roboto", sans-serif;
}

.submit-btn {
    color: #141414;
    background-color: #dddd06;
    border-radius: 5px;
    width: 190px;
    margin-top: 20px;
}

.submit-btn:hover {
    background-color: #016901;
    color: #fafafa; 
}



/*------------------Footer-----------*/

footer {
    background-color: #007cbe;
    height: 50px;
}

.footer-links {
    color: #fafafa;
    font-size: 15px;
    font-family: "Roboto", sans-serif;
    float: right;
    padding: 10px;
    text-decoration: none!important;
}

.footer-links:hover {
    color: #dddd06;
}

/*------------------Media Queries-----------*/

@media only screen and (min-width: 1080px) {

    .navbar-large, ul, ul li, ul li span, .hvr-box-shadow-outset{
        visibility:visible;
        display: inline-block;
    }

    .dropdown {
    visibility: hidden;
    display: none;
}

#logo {
    height: 50%;
}
}

